# yt-month-downloader

./: .gitignore  README.md  pyproject.toml  requirements.txt
yt-month-downloader/: __main__.py  core.py
